samples/errors/unresolved_types.gem
-- unresolved_types.gem
start
  Employee e  -- Employee type not defined
  e.name = "John"
  print e.name
finish